should print NYT <title> now?

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ci-xvfb-test",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,14 +10,13 @@
     "type": "git",
     "url": "https://github.com/ivarvong/ci-xvfb-test.git"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ivarvong/ci-xvfb-test/issues"
-  },
+  "author": "Ivar Vong",
+  "license": "MIT",
   "homepage": "https://github.com/ivarvong/ci-xvfb-test",
   "dependencies": {
     "electron-prebuilt": "^0.35.4",
-    "nightmare": "^2.0.8"
-  }
+    "nightmare": "^2.0.8",
+    "vo": "^1.0.3"
+  },
+  "engine": "node 5.1.0"
 }
