--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
-machine:
-    ruby:
-        version:
-            2.2.2
+machine:    
+    node:
+        version: 
+            5.1.0
 
 dependencies:
     pre: 
